[package]
name = "sp_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.2"

[dev-dependencies]
criterion = { version = "0.5.1" }